--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -175,7 +175,7 @@
     height: auto;
     position: relative;
     left: 33%;
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
 
@@ -184,9 +184,8 @@
     position: fixed;
     top: 10px;
     right: 10px;
-    background: #f0f0f0;
     padding: 10px;
-    width: 360px;
+    width: 340px;
     height: 580px;
 }
 
@@ -200,11 +199,11 @@
 
 .unlockbtn {
     margin-top: 1.7rem;
-    margin-left: 1.5rem;
+    margin-left: 1.3rem;
     background-color: rgb(5, 121, 193);
     border-radius: 30px;
-    width: 300px;
-    height: 45px;
+    width: 285px;
+    height: 55px;
     font-size: 13px;
     color: white;
 }
@@ -221,12 +220,13 @@
     color: rgb(9, 9, 9);
     margin-top: 2.4rem;
     font-size: 12px;
-    font-weight: 250;
+    font-weight: 400;
 }
 
 .bck {
-    font-weight: 900;
-    color: #151515;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    color: rgba(21, 19, 19, 0.756);
     margin-top: 10px;
 }
 
